fix: increase heading line-height to fix overlapping (#274)

--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -119,7 +119,7 @@ strong
 
 h1, h2, h3, h4, h5, h6
   font-weight 500
-  line-height 1.25
+  line-height 1.45
 
   {$contentClass}:not(.custom) > &
     margin-top (0.5rem - $navbarHeight)
